--- a/school-management/src/app/components/admin/admin.component.html
+++ b/school-management/src/app/components/admin/admin.component.html
@@ -3,42 +3,40 @@
   <header class="admin-header">
     <div class="header-content">
       <div class="header-left">
-        <div class="logo">
-          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 4L12 5.5L9 4L3 7V9H21ZM21 10H3V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V10Z" fill="currentColor"/>
-          </svg>
-          <h1>School Management</h1>
-        </div>
-        <div class="breadcrumb">
-          <span>Admin Dashboard</span>
+        <div class="logo" (click)="goHome()">
+          <div class="logo-icon">
+            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 4L12 5.5L9 4L3 7V9H21ZM21 10H3V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V10Z" fill="currentColor"/>
+            </svg>
+          </div>
+          <div class="logo-text">
+            <h1>Abad Alshams</h1>
+            <span class="logo-subtitle">Admin Panel</span>
+          </div>
         </div>
       </div>
       
       <div class="header-right">
-        <div class="user-info">
+        <button class="header-btn website-btn" (click)="goHome()">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 20V14H14V20H19V12H22L12 3L2 12H5V20H10Z" fill="currentColor"/>
+          </svg>
+          <span class="btn-label">Website</span>
+        </button>
+
+        <div class="user-pill">
           <div class="user-avatar">
             {{ user?.username?.charAt(0).toUpperCase() }}
           </div>
-          <div class="user-details">
-            <span class="user-name">{{ user?.username }}</span>
-            <span class="user-role">{{ user?.role }}</span>
-          </div>
+          <span class="user-name">{{ user?.username }}</span>
         </div>
-        
-        <div class="header-actions">
-          <button class="btn-secondary" (click)="goHome()">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10 20V14H14V20H19V12H22L12 3L2 12H5V20H10Z" fill="currentColor"/>
-            </svg>
-            Website
-          </button>
-          <button class="btn-danger" (click)="logout()">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M17 7L15.59 8.41L18.17 11H8V13H18.17L15.59 15.59L17 17L22 12L17 7ZM4 5H12V3H4C2.9 3 2 3.9 2 5V19C2 20.1 2.9 21 4 21H12V19H4V5Z" fill="currentColor"/>
-            </svg>
-            Logout
-          </button>
-        </div>
+
+        <button class="header-btn logout-btn" (click)="logout()">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M17 7L15.59 8.41L18.17 11H8V13H18.17L15.59 15.59L17 17L22 12L17 7ZM4 5H12V3H4C2.9 3 2 3.9 2 5V19C2 20.1 2.9 21 4 21H12V19H4V5Z" fill="currentColor"/>
+          </svg>
+          <span class="btn-label">Logout</span>
+        </button>
       </div>
     </div>
   </header>
